src/style.css
:root{
    --backgroundColor:#efefef;
    --fontColor:black;
    --headerBgColor:#CAEBF2;
    --tasksBorder:black;
}
body{
    background-color:var(--backgroundColor);
    font-size: 16px;
    font-family: Arial, Helvetica, sans-serif;
    line-height: 1.6em;
    color: var(--fontColor);
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 25px min-content auto;

    position: absolute;
    width: 100%;
    min-height: 100vh;
    margin:0;
}
/*Control Section design*/
#Control{
    display: grid;
    grid-template-columns: 1fr 2fr 1fr;   
}
#add-task-form{
    grid-column: 2/3;
}
#basic-control{
    border: 0px solid rgb(163, 42, 42);
    border-radius: 5px;
    padding: 10px 10px;
    cursor: text;
    background: var(--headerBgColor);
}
.task-input-wrapper{
    width:50%;
    margin:0;
    display: inline-block;

}
#text-input{
    font-size: inherit;
    background: var(--headerBgColor);
    border:0;
    padding: 10px 10px;
    width:100%;
    box-sizing: border-box;
}
#text-input:focus{
    outline:none;
}    
/*makes background color note change on auto complete*/
input:-webkit-autofill {
    -webkit-box-shadow: 0 0 0px 1000px var(--headerBgColor) inset;
}
/*priority select menu*/
#priority-wrapper{
    display: inline-block;
}
.custom-select{
    position: relative;
    width: 120px;

}
.custom-select select{
    display: none;
}
.custom-first-option{
    background-color: hsl(191, 61%, 60%);
    border-radius: 10px;
    box-shadow: 10px 10px 15px 1px rgba(0,0,0,0.19);
    -webkit-box-shadow: 10px 10px 15px 1px rgba(0,0,0,0.19);
    -moz-box-shadow: 10px 10px 15px 1px rgba(0,0,0,0.19);
}
.custom-first-option::after{
    position: absolute;
    content: "";
    top: 18px;
    right: 10px;
    width: 0;
    height: 0;
    border: 6px solid transparent;
    border-color: rgb(0, 0, 0) transparent transparent transparent;
}
.custom-first-option.select-arrow-active::after{
    border-color: transparent transparent rgb(0, 0, 0) transparent;
    top: 7px;
}
.custom-options-wrapper div, .custom-first-option{
    color: #030303;
    padding: 8px 16px;
    border: 1px solid transparent;
    border-color: transparent transparent rgba(0, 0, 0, 0.1) transparent;
    cursor: pointer;
}
.custom-options-wrapper{
    position: absolute;
    background-color: hsl(191, 60%, 70%);;
    top: 100%;
    left: 0;
    right: 0;
    z-index: 99;
    border-radius: 10px;
}
.select-hide {
    display: none;
  }
.custom-options-wrapper div:hover, .same-as-selected{
    background-color: rgba(0, 0, 0, 0.1)
}

#basic-control[shake="on"] {
    animation: shake 0.25s linear 0;
    animation-iteration-count: 1;
  }
@keyframes shake {
    0% { transform: translate(2px, 2px) rotate(0deg); }
    10% { transform: translate(-2px, -2px) rotate(-2deg); }
    20% { transform: translate(-3px, 0px) rotate(2deg); }
    30% { transform: translate(3px, 2px) rotate(0deg); }
    40% { transform: translate(2px, -2px) rotate(2deg); }
    50% { transform: translate(-2px, 2px) rotate(-2deg); }
    60% { transform: translate(-3px, 2px) rotate(0deg); }
    70% { transform: translate(3px, 2px) rotate(-2deg); }
    80% { transform: translate(-2px, -2px) rotate(2deg); }
    90% { transform: translate(2px, 2px) rotate(0deg); }
    100% { transform: translate(2px, -2px) rotate(-2deg); }
  }

#submission-wrapper{
    padding: 5px;
    display:flex;
    justify-content:flex-start;
}

#counter-wrapper{
    flex: 1 0 auto;  
    border:1px solid transparent;
    margin-top:7px;
    margin-left:7px;
    min-width: 100px;
    border-radius: 5px; 
}
button{ 
    border:1px solid transparent;
    min-width: 100px;
    background-color: hsl(191, 61%, 60%);
    padding:5px;
    margin:5px;
    border-radius: 5px;
    -webkit-box-shadow: 5px 7px 7px 0px rgba(0,0,0,0.26); 
    box-shadow: 5px 7px 7px 0px rgba(0,0,0,0.26);
    font-size: inherit;
 }
input[type="date"]{
    margin-left:25px;
    border: 1px solid transparent;
    height:25px;
    padding:8px 16px;
    background-color: hsl(191, 61%, 60%);
    border-radius: 10px;
    box-shadow: 10px 10px 15px 1px rgba(0,0,0,0.19);
    -webkit-box-shadow: 10px 10px 15px 1px rgba(0,0,0,0.19);
    -moz-box-shadow: 10px 10px 15px 1px rgba(0,0,0,0.19);
    font-size: inherit;
}


/*View Section design*/
main{
    display: grid;
    grid-template-columns:10vw 80vw 10vw;   
    height:min-content;
}
main *{
        grid-column: 2/3;
}
#list-wrapper{
    position: relative;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content:flex-start;
}
.todo-container{
    margin: 5px;
    padding: 10px;
    border-color: var(--tasksBorder);
    border: solid 2px;
    border-radius: 10px;
    flex:0.33 1 350px;
    
    display: grid;
    grid-template-columns: 35px;
    grid-gap: 3px;
    grid-template-areas: 
    "dc tx tx tx tx"
    " . ca ca ca ca"
    " . pr pr pr pr";

    align-content: center;
}
.todo-text{
    word-break: break-word;
    grid-area: tx;
    border-bottom:rgb(87, 81, 81) solid 2px;

}
.due-date{
    grid-area: dd;
}

/*Left Tick Box Design*/
.delete-checkbox{
    grid-area: dc;
    position: relative;
    right:2px;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}
.delete-checkbox *{
    position: absolute;
    margin:0; 
    cursor: pointer;
    -webkit-box-shadow: 2px 1px 3px 0px rgba(50, 50, 50, 0.68);
    -moz-box-shadow: 2px 1px 3px 0px rgba(50, 50, 50, 0.68);
    box-shadow: 2px 1px 3px 0px rgba(50, 50, 50, 0.68);
}
.delete-checkbox input{
    opacity: 0;
    width: 25px;
    height: 25px;
}
.checkmark{
    background-color:hsl(0, 0%, 80%);;
    border-radius: 5px;
    z-index: -1;
    width: 25px;
    height: 25px;
}
.delete-checkbox:hover input ~ .checkmark {
    background-color: #ccc;
}
.delete-checkbox input:checked ~ .checkmark {
    background-color: #2196F3;
}
.checkmark::after {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    content: "";
    display: none;
}
.delete-checkbox input:checked ~ .checkmark::after {
    display:block
}
.delete-checkbox .checkmark::after {
     content:'\2714';
     font-size: 22px;
}
/*Left Tick Box Design end*/

div[data-marked="true"]{
    opacity: 30%;
}

div[data-template]{
    display: none;
}

.created-at-container{
    grid-area: ca;
}
.priority-container{
    grid-area: pr;
}

